--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,80 @@
 @charset "utf-8";
+
+html, body, .wrapper, .inner, .main_content{
+  height: 100%;
+}
+
+body {
+  /* overflow: hidden; */
+}
+
+.wrapper {
+  background-color: #f2f6f7;
+  padding: 32px 0;
+}
+
+.inner {
+  margin: 0 auto;
+  width: 640px;
+  background-color: #fff;
+}
+
+.main_content {
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, .18);
+  border-radius: 4px;
+  padding-top: 45px;
+}
+
+.title_text {
+  text-align: center;
+  color: #545658;
+  font-size: 24px;
+}
+
+.sns_icon {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+.button {
+  font-size: 13px;
+  text-align: center;
+  padding: 15px 70px;
+  border: 1px solid #d9d9d9;
+  box-sizing: border-box;
+}
+
+.Facebook {
+  border-radius: 4px;
+  background-color: #3b5999;
+}
+
+.Facebook_link {
+  color: #fff;
+}
+
+.Google {
+  margin-left: 10px;
+}
+
+.Google_link {
+  color: #dd4b39;
+}
+
+.explanation_text {
+  color: #949697;
+  font-size: 12px;
+  text-align: center;
+  margin-top: 5px;
+  
+}
+
+.account_info {
+  margin-top: 20px;
+}
+
+.name_area {
+  display: inline-block;
+
+}
