--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 html {
-  height: 1050px;
+  /* height: 1050px; */
 }
 
 body, .wrapper, .inner, .main_content{
@@ -8,23 +8,20 @@ body, .wrapper, .inner, .main_content{
 }
 
 body {
-  /* overflow: hidden; */
-}
-
-.wrapper {
   background-color: #f2f6f7;
-  padding: 32px 0;
 }
 
 .inner {
   margin: 0 auto;
   width: 640px;
   background-color: #fff;
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, .18);
+  border-radius: 4px;
+  padding-bottom: 40px;
+  margin-top: 32px;
 }
 
 .main_content {
-  box-shadow: 0 0 4px 0 rgba(0, 0, 0, .18);
-  border-radius: 4px;
   padding-top: 45px;
 }
 
@@ -176,4 +173,17 @@ body {
 
 .link_color {
   color: #01a6a4;
+}
+
+.bottom_content {
+  font-size: 12px;
+  text-align: center;
+}
+
+.account_question {
+  margin-top: 20px;
+}
+
+.authentication_question {
+  margin-top: 15px;
 }
