--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,4 @@
 @charset "utf-8";
-html {
-  /* height: 1050px; */
-}
 
 body, .wrapper, .inner, .main_content{
   height: 100%;
@@ -17,12 +14,12 @@ body {
   background-color: #fff;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, .18);
   border-radius: 4px;
-  padding-bottom: 40px;
+  padding-bottom: 45px;
   margin-top: 32px;
 }
 
 .main {
-  padding: 48px 64px;
+  padding: 48px 64px 0 64px;
 }
 
 .title_text {
@@ -73,7 +70,6 @@ body {
   color: #dd4b39;
 }
 
-
 .explanation_text {
   color: #949697;
   font-size: 12px;
@@ -83,10 +79,15 @@ body {
 
 .account_form {
   font-size: 12px;
+  margin-top: 23px;
 }
 
 .account_info {
   margin-top: 20px;
+}
+
+.form_area {
+  margin-top: 21px;
 }
 
 .name_area {
@@ -95,47 +96,111 @@ body {
 }
 
 .form_size {
-  width: 100%;
+  width: 50%;
 }
 
 .required_item:after {
   content: "※";
-  color: red;
-  margin-left: 4px;
+  color: #dd4b39;;
+  margin-left: 3px;
 }
 
 .first_name {
-  margin-left: 20px;
+  margin-left: 16px;
+}
+
+.gender_area {
+  margin-top: 20px;
 }
 
 .input_area {
   background-color: #fbfbfb;
   border: 1px solid #d9d9d9;
   border-radius: 4px;
-  height: 30px;
+  box-sizing: border-box;
+  height: 36px;
   width: 100%;
-  margin-top: 4px;
+  margin-top: 5px;
   color: #545658;
+  padding: 5px;
+  font-size: 13px;
+  /* border: none; */
+  outline: none;
+}
+
+.input_area:focus {
+  background-color: #fff;
+  border-color: rgba(59, 133, 133, .4);
+  box-shadow: 0 0 0 2px rgba(1, 191, 189, .1);
+  /* appearance: none; */
 }
 
 .radio_area {
-  margin-top: 4px;
+  margin-top: 8px;
   font-size: 16px;
-  color: #545658;
+  color: #545658;  
+  margin-left: 20px;
+}
+
+.radio_label {
+  margin-left: 35px;
+  position: relative;
+  cursor: pointer;
+}
+
+.radio_label:first-child {
+  margin-left: 0;
 }
 
 .radio_button {
-  vertical-align: baseline;
-  margin-left: 10px;
+  display: none;
 }
 
-.radio_button:first-child {
-  margin-left: 0;
+span::before {
+  content: "";
+  height: 14px;
+  width: 14px;
+  background-color: #fbfbfb;
+  border: 1px solid #d9d9d9;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: -20px;
+}
+
+.radio_button:checked + span::after {
+  content: '';
+  position: absolute;
+  left: -16px;
+  top: 4px;
+  height: 8px;
+  width: 8px;
+  border-radius: 50%;
+  background-color: #01bfbd;
+}
+
+.birthplace {
+  margin-top: 23px;
+  position: relative;
+}
+
+.birthplace::after {
+  content: "";
+  position: absolute;
+  transform: rotate(45deg);
+  height: 5px;
+  width: 5px;
+  border-right: 2px solid #d9d9d9;
+  border-bottom: 2px solid #d9d9d9;
+  top: 63%;
+  left: 239px;
 }
 
 .select_area {
   width: 50%;
+  appearance: none;
 }
+
 
 .course {
   margin-top: 20px;
@@ -184,10 +249,10 @@ body {
 .footer {
   font-size: 12px;
   text-align: center;
+  padding: 35px 0 40px;
 }
 
 .account_question {
-  margin-top: 20px;
 }
 
 .authentication_question {
