--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,7 @@ body {
   background-color: #fff;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, .18);
   border-radius: 4px;
-  padding-bottom: 45px;
-  margin-top: 32px;
+  padding: 32px 0 50px;
 }
 
 .main {
@@ -26,6 +25,7 @@ body {
   text-align: center;
   color: #545658;
   font-size: 24px;
+  position: relative;
 }
 
 .form_area {
@@ -84,6 +84,25 @@ body {
 
 .account_info {
   margin-top: 20px;
+  position: relative;
+  text-align: center;
+}
+
+.account_info::before {
+  content: "";
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  border-bottom: solid 1px #ececec;
+  top: 30%;
+  left: 0;
+}
+
+.account_text {
+  display: inline-block;
+  position: relative;
+  background-color: #fff;
+  padding: 0 10px;
 }
 
 .form_area {
@@ -124,7 +143,6 @@ body {
   color: #545658;
   padding: 5px;
   font-size: 13px;
-  /* border: none; */
   outline: none;
 }
 
@@ -132,7 +150,6 @@ body {
   background-color: #fff;
   border-color: rgba(59, 133, 133, .4);
   box-shadow: 0 0 0 2px rgba(1, 191, 189, .1);
-  /* appearance: none; */
 }
 
 .radio_area {
@@ -201,7 +218,6 @@ span::before {
   appearance: none;
 }
 
-
 .course {
   margin-top: 20px;
   color: #545658;
@@ -221,6 +237,8 @@ span::before {
 .input_area-note {
   height: 100px;
   vertical-align: top;
+  line-height: 25px;
+  resize: none;
 }
 
 .create_account {
@@ -228,18 +246,22 @@ span::before {
 }
 
 .button-create_account {
-  margin-top: 20px;
+  margin-top: 23px;
   width: 100%;
-  padding: 13px;
+  padding: 11px;
   background-color: #01bfbd;
   color: #fff;
   cursor: pointer;
   border-color: transparent;
   border-radius: 4px;
+  font-size: 13px;
 }
 
 .agreement {
   margin-top: 20px;
+  text-align: start;
+  line-height: 16px;
+  font-size: 12px;
 }
 
 .link_color {
@@ -256,5 +278,5 @@ span::before {
 }
 
 .authentication_question {
-  margin-top: 15px;
+  margin-top: 13px;
 }
