--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+/* リファクタリング */
+/* hover */
+
+
 @charset "utf-8";
 
 body, .wrapper, .inner, .main_content{
@@ -44,6 +48,10 @@ body {
   border-color: #3b5999;
 }
 
+.Facebook_link:hover {
+  background-color: #344e87;
+}
+
 .button {
   border-radius: 3px;
   border: 1px solid #d9d9d9;
@@ -68,6 +76,10 @@ body {
 
 .Google_link {
   color: #dd4b39;
+}
+
+.Google_link:hover {
+  background-color: #f7f7f7;
 }
 
 .explanation_text {
@@ -245,18 +257,6 @@ span::before {
   left: -25px;
 }
 
-/* .checkbox_area::after {
-  content: "";
-  position: absolute;
-  border-right: 3px solid #01bfbd;
-  border-bottom: 3px solid #01bfbd;
-  transform: rotate(45deg);
-  height: 16px;
-  width: 8px;
-  top: -4px;
-  left: 6px;
-} */
-
 .checkbox:checked  + .course_name::after{
   content: "";
   position: absolute;
@@ -303,6 +303,10 @@ span::before {
   border-color: transparent;
   border-radius: 4px;
   font-size: 13px;
+}
+
+.button-create_account:hover {
+  background-color: #01a6a4;
 }
 
 .agreement {
