--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
+/* TO DO */
 /* リファクタリング */
-/* hover */
-
+/* クラスごとまとめる */
+/* 不要なプロパティ削除 */
+/*  */
 
 @charset "utf-8";
 
@@ -30,7 +32,6 @@ body {
   text-align: center;
   color: #545658;
   font-size: 24px;
-  position: relative;
 }
 
 .form_area {
@@ -44,13 +45,8 @@ body {
   text-align: center;
 }
 
-.Facebook_icon {
+.icon {
   width: 50%;
-  border-color: #3b5999;
-}
-
-.Facebook_link:hover {
-  background-color: #344e87;
 }
 
 .button {
@@ -69,9 +65,11 @@ body {
   border-color: #3b5999;
 }
 
-.Google_icon {
-  width: 50%;
-  box-sizing: border-box;
+.Facebook_link:hover {
+  background-color: #344e87;
+}
+
+.icon-Google {
   margin-left: 8px;
 }
 
@@ -118,9 +116,9 @@ body {
   padding: 0 10px;
 }
 
-.form_area {
+/* .form_area {
   margin-top: 20px;
-}
+} */
 
 .name_area {
   display: flex;
@@ -143,8 +141,8 @@ body {
 }
 
 .gender_area {
-  margin-top: 20px;
-  width: 50%;
+  /* margin-top: 20px;
+  width: 50%; */
 }
 
 .input_area {
@@ -211,8 +209,8 @@ span::before {
 .radio_button:checked + span::after {
   content: '';
   position: absolute;
-  left: -16px;
-  top: 4px;
+  left: 4px;
+  top: 7px;
   height: 8px;
   width: 8px;
   border-radius: 50%;
@@ -220,7 +218,7 @@ span::before {
 }
 
 .birthplace {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   position: relative;
 }
 
@@ -259,7 +257,7 @@ span::before {
   display: block;
   font-size: 16px;
   margin-top: 10px;
-  position: relative;
+  /* position: relative; */
 }
 
 .course_name::before {
@@ -305,7 +303,7 @@ span::before {
 }
 
 .create_account {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .button-create_account {
@@ -326,9 +324,9 @@ span::before {
 
 .agreement {
   margin-top: 20px;
-  text-align: start;
+  /* text-align: start; */
   line-height: 16px;
-  font-size: 12px;
+  /* font-size: 12px; */
 }
 
 .link_color {
@@ -339,9 +337,6 @@ span::before {
   font-size: 12px;
   text-align: center;
   padding: 34px 0 42px;
-}
-
-.account_question {
 }
 
 .authentication_question {
