--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,13 +54,13 @@ body {
   width: 100%;
 }
 
-.Facebook_link {
+.button-Facebook {
   background-color: #3b5999;
   border-color: #3b5999;
   color: #fff;
 }
 
-.Facebook_link:hover {
+.button-Facebook:hover {
   background-color: #344e87;
 }
 
@@ -68,11 +68,11 @@ body {
   margin-left: 8px;
 }
 
-.Google_link {
+.button-Google {
   color: #dd4b39;
 }
 
-.Google_link:hover {
+.button-Google:hover {
   background-color: #f7f7f7;
 }
 
